tests/Rules/Aria/Fixtures/invalid/role_deprecated.html.twig
<div role="toolbar">Old</div>
